[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwnatpy"
version = "0.1.0.1"
description = "NAT traversal tool - peer-to-peer communication through NATs without port forwarding"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["pwnatpy[dev,test,lint]"]

[project.scripts]
pwnatpy = "pwnatpy.__main__:main"

[project.urls]
Homepage = "https://github.com/user/pwnatpy"
Repository = "https://github.com/user/pwnatpy"
Issues = "https://github.com/user/pwnatpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pwnatpy"]

[tool.hatch.build.targets.sdist]
include = ["src/pwnatpy"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=50"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
